fix gugs shadow, date overflow

--- a/src/Components/Account/Gid/GidItem/GidInfo/GidInfo.module.scss
+++ b/src/Components/Account/Gid/GidItem/GidInfo/GidInfo.module.scss
@@ -2,6 +2,7 @@
 
 .gid-item-info {
   @include media-breakpoint-down(lg) {
+    padding-top: 15px;
     overflow: hidden;
   }
 
