--- a/src/Sections/Account/Booking/BookingSignUpTags/BookingSignUpTags.module.scss
+++ b/src/Sections/Account/Booking/BookingSignUpTags/BookingSignUpTags.module.scss
@@ -46,6 +46,7 @@
   &__list {
     display: flex;
     align-items: center;
+    text-wrap: nowrap;
 
     @include media-breakpoint-down(xl) {
       gap: 15px;
@@ -55,11 +56,15 @@
     }
 
     @include media-breakpoint-between(xl, xxl) {
-      gap: 25px;
+      column-gap: 25px;
+      row-gap: 8px;
+      flex-wrap: wrap;
     }
 
     @include media-breakpoint-up(xxl) {
-      gap: 30px;
+      column-gap: 30px;
+      row-gap: 10px;
+      flex-wrap: wrap;
     }
 
     &::-webkit-scrollbar {
