--- a/src/Sections/Gide/GideFilter/GideFilter.module.scss
+++ b/src/Sections/Gide/GideFilter/GideFilter.module.scss
@@ -23,7 +23,8 @@
       height: 100%;
       left: 0;
       bottom: 0;
-      background: linear-gradient(0deg, rgba(0, 0, 0, 0.178) 32%, rgba(88,113,232,0) 100%);
+      // background: linear-gradient(0deg, rgba(0, 0, 0, 0.178) 32%, rgba(88,113,232,0) 100%);
+      background: linear-gradient(0deg, rgba(33, 36, 40, 0.9) 50%, rgba(88,113,232,0) 100%);
 
       @include media-breakpoint-up(lg) {
         visibility: hidden;
@@ -38,7 +39,10 @@
     &--bg {
       @include media-breakpoint-down(lg) {
         &::before {
-          height: 100%;
+          background: linear-gradient(0deg, rgba(33, 36, 40, 0.9) 15%, rgba(88,113,232,0) 100%);
+          // background: linear-gradient(0deg, rgba(33, 36, 40, 0.9) 50%, rgba(88,113,232,0) 100%);
+          height: 500px;
+          // height: 200px;
         }
       }
     }
